--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-	"extends": "wordpress",
+	"extends": [ "plugin:@wordpress/eslint-plugin/recommended" ],
 	"plugins": ["react"],
 	"parser": "babel-eslint",
 	"parserOptions": {
