--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gutengerg-practice",
+  "name": "gutenberg-practice-01",
   "version": "1.0.0",
   "description": "Test Block",
   "main": "build/index.js",
