--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/drill-lancer/wyvern-block/issues"
   },
   "homepage": "https://github.com/drill-lancer/wyvern-block#readme",
-  "devDependencies": {
-    "@wordpress/scripts": "^11.0.0"
+  "dependencies": {
+    "@wordpress/scripts": "^12.0.0"
   }
 }
